Updated new VBA

--- a/src/vba/sheet_property_tracker.cls
+++ b/src/vba/sheet_property_tracker.cls
@@ -13,7 +13,7 @@ Private Sub Worksheet_SelectionChange(ByVal Target As Range)
 
     Application.EnableEvents = False
 
-    ' Only reset prevShape if it exists
+    ' Clear previous shape highlight first (before clearing row highlights)
     If Not prevShape Is Nothing Then
         On Error Resume Next
         prevShape.Fill.Transparency = 1
@@ -54,7 +54,11 @@ Private Sub Worksheet_SelectionChange(ByVal Target As Range)
     ' Store parcel
     prevParcel = Cells(Target.Row, 1).Value
 
-    
+    ' Move active cell with filter and maintain highlight
+    If Not Intersect(Target, Me.ListObjects(1).DataBodyRange) Is Nothing Then
+        Target.Select
+    End If
+
     Application.EnableEvents = True
 End Sub
 
@@ -62,17 +66,20 @@ Private Sub Worksheet_Calculate()
     Dim r As Range
     Dim lastCol As Long, c As Long
     Dim shp As Shape
+    Dim foundRow As Long
 
     If prevParcel = 0 Then Exit Sub
 
-    ' Find row of stored parcel after sort
+    ' Find row of stored parcel after sort/filter
     For Each r In ActiveSheet.Range("A2:A" & ActiveSheet.Cells(Rows.Count, "A").End(xlUp).Row)
-        If r.Value = prevParcel Then
+        If r.Value = prevParcel And r.EntireRow.Hidden = False Then
+            foundRow = r.Row
+
             ' Highlight row
-            lastCol = Cells(r.Row, Columns.Count).End(xlToLeft).Column
+            lastCol = Cells(foundRow, Columns.Count).End(xlToLeft).Column
             For c = 1 To lastCol
-                If Not IsEmpty(Cells(r.Row, c)) Then
-                    Cells(r.Row, c).Interior.Color = RGB(253, 191, 86)
+                If Not IsEmpty(Cells(foundRow, c)) Then
+                    Cells(foundRow, c).Interior.Color = RGB(253, 191, 86)
                 End If
             Next c
 
@@ -83,16 +90,25 @@ Private Sub Worksheet_Calculate()
                 shp.Fill.Transparency = 0.6
                 shp.Fill.ForeColor.RGB = RGB(253, 191, 86)
                 Set prevShape = shp
-            Else
-                Set prevShape = Nothing
             End If
             On Error GoTo 0
-                 
+
+            ' Move active cell to visible row (ensure we stay within the table bounds)
+            Dim targetCol As Long
+            targetCol = ActiveCell.Column
+            
+            ' Make sure target column is within the data range
+            If targetCol > lastCol Then targetCol = 1
+            
+            ' Only select if the target cell has data or is in column A
+            If targetCol = 1 Or Not IsEmpty(Cells(foundRow, targetCol)) Then
+                Cells(foundRow, targetCol).Select
+            Else
+                Cells(foundRow, 1).Select  ' Default to column A if target is empty
+            End If
+
             Exit For
         End If
     Next r
 End Sub
-
-
-
 
